--- a/zh-CN/9.release-notes/101.enterprise-edition-history-release/103.V2.2/1.ob-2277.md
+++ b/zh-CN/9.release-notes/101.enterprise-edition-history-release/103.V2.2/1.ob-2277.md
@@ -105,13 +105,13 @@ MySQL 模式下，禁止多表更新使用 order by 或 limit 算子， 与 MySQ
 ### 缺陷修复
 
 * 修复 IN 表达式在分区表下计算结果集错误的问题。
-* 修复空 UNIT 在迁移过程中卡主的问题，[点击查看详细信息](https://www.oceanbase.com/knowledge-base/oceanbase-database-20000043614?back=kb)。
-* 修复在计划命中 Plan Cache 的情况，Merge into 执行结果错误的问题，[点击查看详细信息](https://www.oceanbase.com/knowledge-base/oceanbase-database-20000045544?back=kb)。
-* 修复在 JSON 生成列上创建索引的场景中存在内存泄漏的问题，[点击查看详细信息](https://www.oceanbase.com/knowledge-base/oceanbase-database-20000045547?back=kb)。
+* 修复空 UNIT 在迁移过程中卡主的问题。[【点击查看详细信息】](https://www.oceanbase.com/knowledge-base/oceanbase-database-20000043614?back=kb)。
+* 修复在计划命中 Plan Cache 的情况，Merge into 执行结果错误的问题。[【点击查看详细信息】](https://www.oceanbase.com/knowledge-base/oceanbase-database-20000045544?back=kb)。
+* 修复在 JSON 生成列上创建索引的场景中存在内存泄漏的问题。[【点击查看详细信息】](https://www.oceanbase.com/knowledge-base/oceanbase-database-20000045547?back=kb)。
 * 修复备份数据自动清理 `backup_set` 失败的问题。
 * 修复 Oracle 模式下，Package 中使用 Cursor 进行循环操作报错 4179 的问题。
 * 修复因 SLOG 回放错误引起的备库重启失败的问题。
-* 修复 LPAD 函数处理特殊字符（ascii 码为 0x03、0x04、0x05、0x06）返回结果错误的问题，[点击查看详细信息](https://www.oceanbase.com/knowledge-base/oceanbase-database-20000045545?back=kb)。
+* 修复 LPAD 函数处理特殊字符（ascii 码为 0x03、0x04、0x05、0x06）返回结果错误的问题。[【点击查看详细信息】](https://www.oceanbase.com/knowledge-base/oceanbase-database-20000045545?back=kb)。
 * 修复超时备份数据清理是，清理任务长期处于 DOING 状态无法停止的问题。
 * 修复事务执行时被中断，在 SQL ADUIT 里记录的 trans id 错误的问题。
 
@@ -144,11 +144,11 @@ MySQL 模式下，禁止多表更新使用 order by 或 limit 算子， 与 MySQ
 
 ### 缺陷修复
 
-* 修复存储过程调试内 `to_hex()` 函数执行引起宕机的问题，[点击查看详细信息](https://www.oceanbase.com/knowledge-base/oceanbase-database-20000038422?back=kb)。
+* 修复存储过程调试内 `to_hex()` 函数执行引起宕机的问题。[【点击查看详细信息】](https://www.oceanbase.com/knowledge-base/oceanbase-database-20000038422?back=kb)。
 * 修复加载系统变量失败时异常释放 Session 导致发生宕机的问题。
 * 修复因备份和恢复逻辑使用的 TimeZone 不同，导致恢复出来的表字段默认值与原表相差 8 个小时的问题。
 * 修复在参数 `_enable_fulltext_index` 为 OFF 时，创建全文索引异常成功的问题。
-* 修复 Like 特殊字符 “+/” 走索引扫描时查询结果错误的问题，[点击查看详细信息](https://www.oceanbase.com/knowledge-base/oceanbase-database-20000036899?back=kb)。
+* 修复 Like 特殊字符 “+/” 走索引扫描时查询结果错误的问题。[【点击查看详细信息】](https://www.oceanbase.com/knowledge-base/oceanbase-database-20000036899?back=kb)。
 * 修复执行计划走内链接子查询时，OceanBase 数据库与 MySQL 查询结果不一致的问题。
 * 修复 outer join 场景下，改写查询行数不一致的问题。
 * 修复 `CONCAT()` 函数异常约束为负数的问题。
