--- a/zh-CN/7.reference/2.administrator-guide/4.replica-management/2.manage-partition-table/1.oracle-mode/1.partition-overview-of-oracle-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/4.replica-management/2.manage-partition-table/1.oracle-mode/1.partition-overview-of-oracle-mode.md
@@ -30,7 +30,7 @@ OceanBase 数据库 Oracle 模式目前支持的分区类型如下：
 
 Range 分区根据分区表定义时为每个分区建立的分区键值范围，将数据映射到相应的分区中。它是常见的分区类型，经常跟日期类型一起使用。例如：可以将业务日志表按日/周/月分区。
 
-Range 分区的分区键必须为列名，不能使用表达式，支持数值类型、字符串类型、时间类型（除了 TIMESTAMP WITH TIME ZONE 类型和 TIMESTAMP WITH LOCAL TIME ZONE 类型）、Interval 类型、RAW 类型等，不支持 BLOB 和 CLOB 类型。
+Range 分区的分区键由一个或多个列组成，分区键必须为列名，不能使用表达式，支持数值类型、字符串类型、时间类型（除了 TIMESTAMP WITH TIME ZONE 类型和 TIMESTAMP WITH LOCAL TIME ZONE 类型）、Interval 类型、RAW 类型等，不支持 BLOB 和 CLOB 类型。
 
 ### List 分区
 
