--- a/zh-CN/6.manage/5.security-and-permissions/3.access-control/4.1rpc-connection-authentication.md
+++ b/zh-CN/6.manage/5.security-and-permissions/3.access-control/4.1rpc-connection-authentication.md
@@ -1,13 +1,14 @@
 # RPC 连接认证
 
 ## 功能简介
-<!-- 还在补充-->
-本方案支持灰度升级流程（分段平滑升级不影响业务进程），升级过程中，高版本与低版本的 OBServer 是相互兼容的。
-即高版本作为客户端能连入低版本服务端；同时低版本作为客户端也能连入高版本服务端。升级后，默认不开启 RPC 认证，需要手动开启。
+
+开启 RPC 连接认证可以提升 RPC 通信的安全性。通过认证的客户端才能与 OBServer 节点建立 RPC 连接，可以有效拦截攻击者的恶意 RPC 报文，防止恶意 RPC 被 OBServer 节点执行。
+
+在升级兼容性方面，本方案支持灰度升级流程，可以分段平滑升级，不影响业务进程。在升级过程中，高版本与低版本的 OBServer 节点是相互兼容的。即高版本作为客户端能够连接低版本服务端，同时低版本作为客户端也能够连接高版本服务端。升级后，默认情况下不开启 RPC 认证，需要手动开启。
 
 ## 限制条件
 
-OceanBase 数据库 V4.2.0 版本的 RPC 认证的功能，只有在启用 pkt-nio 网络框架后才能使用，即在开启 RPC 认证之前需要保证 _enable_pkt_nio 配置项设置为 True。
+OceanBase 数据库 V4.2.0 版本的 RPC 认证的功能，只有在启用 pkt-nio 网络框架后才能使用，即在开启 RPC 认证之前需要保证 `_enable_pkt_nio` 配置项设置为 True。
 
 <main id="notice" type='explain'>
   <h4>说明</h4>
@@ -16,46 +17,68 @@ OceanBase 数据库 V4.2.0 版本的 RPC 认证的功能，只有在启用 pkt-n
 
 ## 使用示例
 
-此操作过程是基于 SSL 握手开启的 RPC 认证。
+### 开启认证
 
-1. 需要在安装目录下创建 wallet 文件夹并将证书和私钥文件放入该文件夹。证书和私钥文件包括根证书（ca.pem）、证书（server-cert.pem）、私钥（server-key.pem）三个文件。
+目前 OBServer 节点提供基于 SSL 握手的 RPC 连接认证，开启方式如下。
 
-   <main id="notice" type='explain'>
-     <h4>说明</h4>
-     <ul>
-     <li>默认安装目录路径：/home/admin/oceanbase。</li>
-     <li>wallet 文件夹及文件夹下的文件名不能更改。</li>
-     <li>若拥有多台服务器，则每台服务器的安装目录下都需创建 wallet 文件夹，并在该文件夹中放入证书和私钥。</li>
-     <li>请确保所需的证书文件就绪后再开启认证，否则，会导致认证失败，进而服务不可用。</li>
-     </ul>
-   </main>
+#### 准备 SSL 证书
 
-2. 登录 OceanBase 数据库，依次执行如下命令。
+需要在安装目录下创建 wallet 文件夹并将证书和私钥文件放入该文件夹。证书和私钥文件包括根证书（ca.pem）、证书（server-cert.pem）、私钥（server-key.pem）三个文件。
 
-   1. 加载 RPC 认证相关的 SSL 配置。有关开启 SSL 连接的更多信息，请参见 [ssl_client_authentication](../../../7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/194.ssl_client_authentication.md)。
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <ul>
+  <li>默认安装目录路径：/home/admin/oceanbase。</li>
+  <li>wallet 文件夹及文件夹下的文件名不能更改。</li>
+  <li>若拥有多台服务器，则每台服务器的安装目录下都需创建 wallet 文件夹，并在该文件夹中放入证书和私钥。</li>
+  <li>请确保所需的证书文件就绪后再开启认证，否则，会导致认证失败，进而服务不可用。</li>
+  </ul>
+</main>
 
-      ```sql
-      ALTER SYSTEM SET ssl_client_authentication=True;
-      ```
+#### 执行连接命令
 
-   2. 将客户端的认证方式设置为 `SSL_NO_ENCRYPT`。有关客户端认证的详细信息，请参见 [rpc_client_authentication_method](../../../7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/281.rpc_client_authentication_method.md)。
+以 sys 租户身份登录 OceanBase 数据库，依次执行如下命令。
 
-      ```sql
-      ALTER SYSTEM SET rpc_client_authentication_method = 'SSL_NO_ENCRYPT';
-      ```
+1. 开启 RPC 认证相关的 SSL 配置。有关开启 SSL 连接的更多信息，请参见 [ssl_client_authentication](../../../7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/194.ssl_client_authentication.md)。
 
-   3. 将服务端的认证方式设置为 `NONE` 或 `SSL_NO_ENCRYPT`。有关服务端认证的详细信息，请参见 [rpc_server_authentication_method](../../../7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/282.rpc_server_authentication_method.md)。
+   ```sql
+   ALTER SYSTEM SET ssl_client_authentication=True;
+   ```
 
-      ```sql
-      ALTER SYSTEM SET rpc_server_authentication_method = 'SSL_NO_ENCRYPT';
-      ```
+2. 将客户端的认证方式设置为 `SSL_NO_ENCRYPT`。有关客户端认证的详细信息，请参见 [rpc_client_authentication_method](../../../7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/281.rpc_client_authentication_method.md)。
 
-      <main id="notice" type='notice'>
-       <h4>注意</h4>
-       <p>对于安全要求比较高的场景，建议在服务端禁掉 NONE。</p>
-      </main>
+   ```sql
+   ALTER SYSTEM SET rpc_client_authentication_method = 'SSL_NO_ENCRYPT';
+   ```
+
+3. 将服务端的认证方式设置为 `SSL_NO_ENCRYPT`。有关服务端认证的详细信息，请参见 [rpc_server_authentication_method](../../../7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/282.rpc_server_authentication_method.md)。
+
+   ```sql
+   ALTER SYSTEM SET rpc_server_authentication_method = 'SSL_NO_ENCRYPT';
+   ```
+
+   <main id="notice" type='notice'>
+    <h4>注意</h4>
+    <p>虽然将服务端认证方式设置为 <code>ALL</code>（即 <code>ALTER SYSTEM SET rpc_server_authentication_method = 'ALL';</code> ）可以开启认证，但这也意味着服务端允许客户端不进行认证直接连接，存在较大的安全风险。因此，在生产环境下不建议采用这种方式。</p>
+    </main>
+
+### 关闭认证
+
+1. 将客户端的认证方式设置为 `NONE`。
+
+   ```sql
+   ALTER SYSTEM SET rpc_client_authentication_method = 'NONE';
+   ```
+
+2. 将服务端的认证方式设置为 `NONE` 或 `ALL`。
+
+   ```sql
+   ALTER SYSTEM SET rpc_server_authentication_method = 'NONE';
+   --或者
+   ALTER SYSTEM SET rpc_server_authentication_method = 'ALL';
+   ```
 
 ## 注意事项
 
 * 如果后续需要更改认证方式，只需重新修改设置。
-* 开启认证后，只对新建的 RPC 连接起作用，已有的连接不受影响。若想要对已连接的客户端进行认证，需要分批重启 OBServer。
+* 开启认证后，只对新建的 RPC 连接起作用，已有的连接不受影响。若想要对已连接的客户端进行认证，需要分批重启节点。
