--- a/zh-CN/6.manage/9.performance-tuning/3.identify-bottlenecks-within-components/3.performance-bottlenecks-of-observer/3.hard-parsing.md
+++ b/zh-CN/6.manage/9.performance-tuning/3.identify-bottlenecks-within-components/3.performance-bottlenecks-of-observer/3.hard-parsing.md
@@ -6,7 +6,7 @@
 
 <main id="notice" type='explain'>
     <h4>说明</h4>
-    <p>关于 <code>V$OB_SQL_AUDIT</code> 的详细介绍，参见 <a href="../../../../../7.reference/5.system-reference/5.system-view-of-oracle-mode/3.performance-view-of-oracle-mode/30.gv-sql_audit-of-oracle-mode.md">V$OB_SQL_AUDIT(Oracle 模式)</a> 和 <a href="../../../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/3.performance-view-of-mysql-mode/22.gv-sql_audit-of-mysql-mode.md">V$OB_SQL_AUDIT(MySQL 模式)</a>。</p>
+    <p>关于 <code>V$OB_SQL_AUDIT</code> 的详细介绍，参见 <a href="../../../../7.reference/5.system-reference/5.system-view-of-oracle-mode/3.performance-view-of-oracle-mode/30.gv-sql_audit-of-oracle-mode.md">V$OB_SQL_AUDIT(Oracle 模式)</a> 和 <a href="../../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/3.performance-view-of-mysql-mode/22.gv-sql_audit-of-mysql-mode.md">V$OB_SQL_AUDIT(MySQL 模式)</a>。</p>
 </main>
 
 例如：
