--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/1.manage-clusters/4.manage-zones-in-a-cluster/2.add-or-remove-a-zone.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/1.manage-clusters/4.manage-zones-in-a-cluster/2.add-or-remove-a-zone.md
@@ -48,8 +48,10 @@ zone_option:
 示例：在集群中新增一个名为 `zone1`的 Zone。
 
 ```sql
-obclient> ALTER SYSTEM ADD ZONE zone1;
+ALTER SYSTEM ADD ZONE zone1;
 ```
+
+更多添加 Zone 的详细操作，请参见 [添加 Zone](../../../../../6.manage/1.cluster-management/3.common-cluster-operations/8.add-a-zone.md)。
 
 ## 删除 Zone
 
@@ -70,5 +72,5 @@ ALTER SYSTEM DELETE ZONE zone_name;
 示例：在集群中删除名为 `zone1` 的 Zone。
 
 ```sql
-obclient> ALTER SYSTEM DELETE ZONE zone1;
+ALTER SYSTEM DELETE ZONE zone1;
 ```
