--- a/en-US/2.quickstart/8.tutorial-list.md
+++ b/en-US/2.quickstart/8.tutorial-list.md
@@ -6,35 +6,35 @@ These video tutorials cover the following subjects:
 
 * Deploy a test environment for OceanBase Database
 
-   * [Use OBD to quickly deploy OceanBase Database](#use-obd-to-quickly-deploy-oceanbase-database)
+   * [Use OBD to quickly deploy OceanBase Database](#use%20obd%20to%20quickly%20deploy%20oceanbase%20database)
 
-   * [Use Docker to quickly deploy OceanBase Database](#use-docker-to-quickly-deploy-oceanbase-database)
+   * [Use Docker to quickly deploy OceanBase Database](#use%20docker%20to%20quickly%20deploy%20oceanbase%20database)
 
-* [Perform the basic operations of OceanBase Database](#perform-the-basic-operations-of-oceanbase-database)
+* [Perform the basic operations of OceanBase Database](#perform%20the%20basic%20operations%20of%20oceanbase%20database)
 
 * Build sample applications
 
-   * [Build a Python application](#build-a-python-application)
+   * [Build a Python application](#build%20a%20python%20application)
 
-   * [Build a C application](#build-a-c-application)
+   * [Build a C application](#build%20a%20c%20application)
 
-   * [Build a Go application](#build-a-go-application)
+   * [Build a Go application](#build%20a%20go%20application)
 
-   * [Build a Java application](#build-a-java-application)
+   * [Build a Java application](#build%20a%20java%20application)
 
 * Try out the advanced features of OceanBase Database
 
-   * [Run the TPC-C benchmark in OceanBase Database](#run-the-tpc-c-benchmark-in-oceanbase-database)
+   * [Run the TPC-C benchmark in OceanBase Database](#run%20the%20tpc-c%20benchmark%20in%20oceanbase%20database)
 
-   * [Try out the hot row update capability of OceanBase Database](#try-out-the-hot-row-update-capability-of-oceanbase-database)
+   * [Try out the hot row update capability of OceanBase Database](#try%20out%20the%20hot%20row%20update%20capability%20of%20oceanbase%20database)
 
-   * [Try out operational OLAP](#try-out-operational-olap)
+   * [Try out operational OLAP](#try%20out%20operational%20olap)
 
-   * [Try out parallel import and data compression](#try-out-parallel-import-and-data-compression)
+   * [Try out parallel import and data compression](#try%20out%20parallel%20import%20and%20data%20compression)
 
-   * [Try out the multi-tenant feature](#try-out-the-multi-tenant-feature)
+   * [Try out the multi-tenant feature](#try%20out%20the%20multi%20tenant%20feature)
 
-   * [Try out new DDL features](#try-out-new-ddl-features)
+   * [Try out new DDL features](#try%20out%20new%20ddl%20features)
 
 ## Use OBD to quickly deploy OceanBase Database
 
