--- a/zh-CN/4.installation-and-deployment/2.local-deployment/4.deploy-OceanBase-database-of-multi-node-cluster.md
+++ b/zh-CN/4.installation-and-deployment/2.local-deployment/4.deploy-OceanBase-database-of-multi-node-cluster.md
@@ -28,7 +28,11 @@
 * OCP
   
   OceanBase Cloud Platform，OceanBase 运维管理工具，简称为 OCP。详细信息请参考 [OCP 文档](https://www.oceanbase.com/docs/ocp-cn)。
+
+* OCP Express
   
+  基于 Web 的 OceanBase 数据库 4.x 管理工具，融合在 OceanBase 数据库集群中，支持对数据库集群关键性能及基本数据库管理功能。详细信息请参考 [OceanBase 云平台 Express (OCP Express)](https://www.oceanbase.com/docs/common-oceanbase-database-cn-10000000001692855)。
+
 ## 前提条件
 
 在连接 OceanBase 数据库之前，请您确认以下信息：
@@ -53,8 +57,7 @@
 | OBServer 节点  | 10.10.10.3 | OceanBase 数据库 Zone3   |
 | OBAgent        | 10.10.10.1、10.10.10.2、10.10.10.3 | OceanBase 数据库监控采集框架   |
 | ODP            | 10.10.10.4 | OceanBase 数据库专用的反向代理软件   |
-| Grafana    | 10.10.10.4 | 数据可视化工具，如果您已经安装或计划安装 OCP，则无需安装 Grafana     |
-| Prometheus | 10.10.10.4 | 系统监控和报警系统，如果您已经安装或计划安装 OCP，则无需安装 Prometheus      |
+| OCP Express    | 10.10.10.4 | 基于 Web 的 OceanBase 数据库 4.x 管理工具      |
 
 <main id="notice" type='explain'>
   <h4>说明</h4>
@@ -117,21 +120,24 @@
 
 <main id="notice" type='explain'>
   <h4>说明</h4>
-  <p>您可通过执行 <code>which obd</code> 和 <code>which obclient</code> 命令检测是否安装成功, 如果可以找到 <code>.oceanbase-all-in-one</code> 目录下的 obd 和 obclient 路径，则表示安装成功。</p>
+  <p>您可通过执行 <code>which obd</code> 和 <code>which obclient</code> 命令检测是否安装成功，如果可以找到 <code>.oceanbase-all-in-one</code> 目录下的 obd 和 obclient 路径，则表示安装成功。</p>
 </main>
 
 ### 步骤二：配置 OBD
 
 <main id="notice" type='explain'>
   <h4>说明</h4>
-  <p>本文以 OBD V1.6.2 为例提供操作指导。不同 OBD 版本的配置文件可能不同，请以实际配置文件为准。更多 OBD 相关内容请参见 <a href="https://www.oceanbase.com/docs/obd-cn">OBD 文档</a>。</p>
+  <p>本文以 OBD V2.1.1 为例提供操作指导。不同 OBD 版本的配置文件可能不同，请以实际配置文件为准。更多 OBD 相关内容请参见 <a href="https://www.oceanbase.com/docs/obd-cn">OBD 文档</a>。</p>
 </main>
 
 如果是离线部署 OceanBase 集群，可参考 **步骤一** 在中控机上下载并安装 all-in-one 安装包，all-in-one 安装包提供的组件已经经过相互适配测试，为官方推荐版本。
 
 如果对部署所需组件版本有特别要求，可从 [OceanBase 软件下载中心](https://www.oceanbase.com/softwarecenter) 自行下载组件对应版本安装包，复制到中控机任一目录，在该目录下参考以下步骤配置 OBD。
 
-如果是在线部署 OceanBase 集群或通过 all-in-one 安装包部署 OceanBase 集群，则跳过步骤 1~3。
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>如果是在线部署 OceanBase 集群或通过 all-in-one 安装包部署 OceanBase 集群，则跳过步骤 1~3。</p>
+</main>
 
 1. 禁用远程仓库
 
@@ -189,11 +195,18 @@
 
    * 分布式部署 + ODP 配置样例：mini-distributed-with-obproxy-example.yaml、distributed-with-obproxy-example.yaml
 
-   * 分布式部署 + ODP + OBAgent + Grafana + Prometheus 配置样例：all-components-min.yaml、all-components.yaml
+   * 分布式部署 + ODP + OCP Express 配置样例：default-components.yaml、default-components-min.yaml
+
+   * 分布式部署全部组件：all-components-min.yaml、all-components.yaml
+  
+   <main id="notice" type='explain'>
+    <h4>说明</h4>
+    <p>若您选择部署 OCP Express 或已部署 OCP，则无需部署 Prometheus 和 Grafana。</p>
+   </main>
 
 5. 修改配置文件。
 
-   此处以使用 all-components.yaml 部署分布式 OceanBase 集群为例，介绍如何修改配置文件。
+   此处以使用 default-components.yaml 部署分布式 OceanBase 集群为例，介绍如何修改配置文件。
 
    <main id="notice" type='explain'>
     <h4>说明</h4>
@@ -224,30 +237,30 @@
       ```yaml
       oceanbase-ce:
         servers:
+          # Please don't use hostname, only IP can be supported
           - name: server1
-            # Please don't use hostname, only IP can be supported
             ip: 10.10.10.1
           - name: server2
             ip: 10.10.10.2
           - name: server3
             ip: 10.10.10.3
         global:
-          # Please set devname as the network adaptor's name whose ip is  in the setting of severs.
-          # if set severs as "127.0.0.1", please set devname as "lo"
-          # if current ip is 192.168.1.10, and the ip's network adaptor's name is "eth0", please use "eth0"
           devname: eth0
-          # if current hardware's memory capacity is smaller than 50G, please use the setting of "mini-single-example.yaml" and do a small adjustment.
+          cluster_id: 1
+          # please set memory limit to a suitable value which is matching resource.
           memory_limit: 64G # The maximum running memory for an observer
-          # The reserved system memory. system_memory is reserved for general tenants. The default value is 30G.
-          system_memory: 30G
-          datafile_size: 192G # Size of the data file.
+          system_memory: 30G # The reserved system memory. system_memory is reserved for general tenants.
+          datafile_size: 192G # Size of the data file. 
           log_disk_size: 192G # The size of disk space used by the clog files.
           syslog_level: WARN # System log level. The default value is INFO.
           enable_syslog_wf: false # Print system logs whose levels are higher than WARNING to a separate log file. The default value is true.
           enable_syslog_recycle: true # Enable auto system log recycling or not. The default value is false.
           max_syslog_file_count: 4 # The maximum number of reserved log files before enabling auto recycling. The default value is 0.
-          skip_proxy_sys_private_check: true
-          enable_strict_kernel_release: false
+          ocp_meta_tenant: # The config for ocp express meta tenant
+            tenant_name: ocp
+            max_cpu: 1
+            memory_size: 2G
+            log_disk_size: 7680M
           mysql_port: 2881 # External port for OceanBase Database. The default value is 2881. DO NOT change this value after the cluster is started.
           rpc_port: 2882 # Internal port for OceanBase Database. The default value is 2882. DO NOT change this value after the cluster is started.
           # The working directory for OceanBase Database. OceanBase Database is started under this directory. This is a required field.
@@ -256,7 +269,7 @@
           data_dir: /data
           # The directory for clog, ilog, and slog. The default value is the same as the data_dir value.
           redo_dir: /redo
-          root_password: ******** # root user password
+          root_password: ****** # root user password, can be empty
           proxyro_password: ******** # proxyro user pasword, consistent with obproxy's observer_sys_password, can be empty
         server1:
           zone: zone1
@@ -281,7 +294,7 @@
 
       |  配置项  |  是否必选  |  默认值  |  说明     |
       |----------|-----------|----------|----------|
-      | servers  | 必选      | 无        | 每个机器需要用 `- name: 机器标识名 (换行)ip: 机器 ip` 指定，多个机器就指定多次。 |
+      | servers  | 必选      | 无        | 每个机器需要用 `- name: 机器标识名 (换行)ip: 机器 ip` 指定，多个机器就指定多次，机器标识名不能重复。</br>在机器 IP 不重复的情况下，也可以使用 `- <ip> （换行）- <ip>` 的格式指定，此时 `- <ip>` 的格式相当于 `- name: 机器 IP（换行）ip: 机器 IP`。 |
       | devname  | 可选      | 无        | 和 `servers` 里指定的 IP 对应的网卡，通过 `ip addr` 命令可以查看 IP 和网卡对应关系。 |
       | memory_limit  | 可选      | 0       | observer 进程能从环境中获取的最大内存，未配置的情况下以 `memory_limit_percentage` 配置项为准，配置项详细介绍请参考 [memory_limit](../../7.reference/5.system-configuration-items/3.cluster-level-configuration-items-1/136.memory_limit-1-2-3.md) 和 [memory_limit_percentage](../../7.reference/5.system-configuration-items/3.cluster-level-configuration-items-1/137.memory_limit_percentage-1.md)。 |
       | system_memory  | 可选      | 0M        | 保留的系统内存，该参数值会占用 `memory_limit` 的内存，未配置的情况下 OceanBase 数据库会自适应。 |
@@ -291,6 +304,7 @@
       | enable_syslog_wf  | 可选      | true      | 设置是否把 WARN 以上级别的系统日志打印到一个单独的日志文件中。 |
       | enable_syslog_recycle  | 可选      | false        | 指定是否自动回收系统日志，需要和 `max_syslog_file_count` 参数搭配使用，当 `max_syslog_file_count` 设置为非 0 值时才会生效。 |
       | max_syslog_file_count  | 可选      | 0        | 设置在回收日志文件之前可以容纳的日志文件数量。值为 0 时表示不自动清理。 |
+      | ocp_meta_tenant       | 可选       | tenant_name: ocp </br>max_cpu: 1 </br>memory_size: 2147483648 | 配置 OCP Express 所需的 meta 租户规格，ocp_meta_tenant 下的配置都会作为创建租户时的参数传入。</br> 示例中仅列举了几个重要配置，具体可配置参数可参考创建租户命令支持的参数，详情请参见 OBD 文档 [集群命令组](https://www.oceanbase.com/docs/community-obd-cn-10000000002049482) 中 **obd cluster tenant create** 命令介绍。
       | mysql_port  | 必选      | 2881        | 设置 SQL 服务协议端口号，默认为 2881。OBClient 直连该端口可以访问该节点。 |
       | rpc_port  | 必选      | 2882       | 设置远程访问的协议端口号，是 observer 进程跟其他节点进程之间的 RPC 通信端口，默认为 2882。 |
       | home_path  | 必选      | 无       | OceanBase 数据库默认安装路径，建议在普通用户 admin 下。 |
@@ -320,13 +334,19 @@
 
       |  配置项  |  是否必选  |  默认值  |  说明     |
       |----------|-----------|----------|----------|
+      | servers  | 必选      | 无        | 每个机器需要用 `- name: 机器标识名 (换行)ip: 机器 ip` 指定，多个机器就指定多次，机器标识名不能重复。</br>在机器 IP 不重复的情况下，也可以使用 `- <ip> （换行）- <ip>` 的格式指定，此时 `- <ip>` 的格式相当于 `- name: 机器 IP（换行）ip: 机器 IP`。 |
       | listen_port  | 必选      | 2883        | ODP 监听端口，默认 2883。 |
       | prometheus_listen_port  | 必选       | 2884        | ODP prometheus 监听端口，默认 2884。 |
       | home_path  | 必选       | 无       | ODP 安装路径，建议在普通用户 admin 下。 |
       | obproxy_sys_password  | 可选      | OBD V2.0.0 及之前版本默认为空</br>OBD V2.1.0 及之后版本默认为随机字符串       | ODP 管理员账户（root@proxysys）的密码。使用 OBD V2.1.0 及之后版本时，未设置的情况下会自动生成随机字符串。 |
       | observer_sys_password  | 可选      | OBD V2.0.0 及之前版本默认为空</br>OBD V2.1.0 及之后版本默认为和 `proxyro_password` 相同的随机字符串        | ODP 连接 OceanBase 集群使用的账户名（proxyro@sys）的密码，配置密码需和 `observer_sys_password` 的值相同。使用 OBD V2.1.0 及之后版本时，未设置的情况下会自动生成和 `proxyro_password` 相同的随机字符串。 |
 
-   4. 修改监控相关组件的 IP 和 home_path。
+   4. 修改 obagent 和 ocp-express 组件的 IP 和 `home_path`。
+
+      <main id="notice" type='notice'>
+        <h4>注意</h4>
+        <p>OBD 自 V2.0.0 起支持部署 OCP Express，且 OBD V2.0.0 仅支持部署 OCP Express V1.0.0，OCP Express V1.0.1 及之后版本需使用 OBD V2.1.0 及之后版本部署。</p>
+      </main>
 
       ```yaml
       obagent:
@@ -342,30 +362,30 @@
             ip: 10.10.10.3
         global:
           home_path: /home/admin/obagent
-          ob_monitor_status: active
-      prometheus:
+      ocp-express:
         depends:
+          - oceanbase-ce
+          - obproxy-ce
           - obagent
         servers:
-          - 10.10.10.4
+          - name: server1
+            ip: 10.10.10.4
         global:
-          home_path: /home/admin/prometheus
-      grafana:
-        depends:
-          - prometheus
-        servers:
-          - 10.10.10.4
-        global:
-          home_path: /home/admin/grafana
-          login_password: ********
+          # The working directory for prometheus. prometheus is started under this directory. This is a required field.
+          home_path: /home/oceanbase/ocp-server
+          memory_size: 1G # The memory size of ocp-express server.  The recommend value is 512MB * (expect node num + expect tenant num) * 60MB.
+          admin_passwd: ********
+          logging_file_total_size_cap: 10GB # The total log file size of ocp-express server
+          # logging_file_max_history: 1 # The maximum of retention days the log archive log files to keep. The default value is unlimited
       ```
 
       |  配置项  |  是否必选  |  默认值  |  说明     |
       |----------|-----------|----------|----------|
-      | servers  | 必选      | 无        | 每个机器需要用 `- name: 机器标识名 (换行)ip: 机器 ip 指定`，多个机器就指定多次。 |
+      | servers  | 必选      | 无        | 每个机器需要用 `- name: 机器标识名 (换行)ip: 机器 ip 指定`，多个机器就指定多次，机器标识名不能重复。</br>在机器 IP 不重复的情况下，也可以使用 `- <ip> （换行）- <ip>` 的格式指定，此时 `- <ip>` 的格式相当于 `- name: 机器 IP（换行）ip: 机器 IP`。 |
       | home_path  | 必选       | 无       | 组件的安装路径，建议在普通用户 admin 下。 |
-      | ob_monitor_status  | 必选     | active      | 设置 OceanBase 监控指标采集状态，active 表示开启，inactive 表示关闭。 |
-      | login_password  | 必选       | 无        | Grafana 登录密码。 |
+      | memory_size | 必选  | 无  | OCP Express 服务器的内存容量，推荐算法为：memory_size = 512MB +（期望的节点数 * 期望的租户数）* 60MB，期望的租户数需要包含 sys 和 ocp meta 租户本身。 |
+      | logging_file_total_size_cap  | 必选       | 1GB        | 日志文件总大小，默认为 1GB。<blockquote>该参数的单位需使用 GB 或 MB，若使用 G 或 M 单位会报错，无法成功部署 OCP Express。</blockquote> |
+      | admin_passwd | 必选  | 无  | OCP Express 登录页面的 admin 账户密码，密码长度 8~32 位，至少包含 2 位数字、2 位大写字母、2 位小写字母和 2 位特殊字符（~!@#%^&*_-+=|(){}[]:;,.?/）。使用 OBD V2.1.0 及之后版本时，未设置的情况下会自动生成随机字符串。 |
 
 ### 步骤三：部署 OceanBase 集群
 
@@ -377,7 +397,7 @@
 1. 部署 OceanBase 集群
 
    ```shell
-   [admin@test001 ~]$ obd cluster deploy obtest -c all-components.yaml
+   [admin@test001 ~]$ obd cluster deploy obtest -c default-components.yaml
    ```
 
    联网情况下，在您执行了 `obd cluster deploy` 命令之后，OBD 将检查您的目标机器是否有部署所需安装包。如果没有安装包，OBD 将自动从 YUM 源获取。
@@ -388,7 +408,7 @@
    [admin@test001 ~]$ obd cluster start obtest
    ```
 
-   当安装了 Grafana 或 Prometheus 时，会输出 Grafana 或 Prometheus 的访问地址。在阿里云或其他云环境下，安装程序可能因无法获取公网 IP 而输出内网地址，此 IP 非公网地址，您需要使用正确的地址。
+   当安装了 OCP Express 时，会输出 OCP Express 的访问地址。在阿里云或其他云环境下，安装程序可能因无法获取公网 IP 而输出内网地址，此 IP 非公网地址，您需要使用正确的地址。
 
 3. 查看 OceanBase 集群状态
 
@@ -499,4 +519,12 @@ obd cluster destroy obtest
    ```shell
    [admin@test001 bin]$ vim ~/.bash_profile
    # 删除该文件中的 source /home/admin/.oceanbase-all-in-one/bin/env.sh
+   ```
+
+3. 使修改生效
+
+   删除环境变量后，您需重新登录终端，或者执行 source 命令使修改生效，可参考如下命令。
+
+   ```shell
+   [admin@test001 ~]$ source ~/.bash_profile
    ```
