--- a/zh-CN/7.reference/5.system-reference/4.system-view-of-mysql-mode/3.performance-view-of-mysql-mode/68.v-plan_cache_plan_explain-of-mysql-mode.md
+++ b/zh-CN/7.reference/5.system-reference/4.system-view-of-mysql-mode/3.performance-view-of-mysql-mode/68.v-plan_cache_plan_explain-of-mysql-mode.md
@@ -6,10 +6,10 @@ V$OB_PLAN_CACHE_PLAN_EXPLAIN
 
 展示缓存在当前 OBServer 节点的计划缓存中的物理执行计划。
 
-  <main id="notice" type='explain'>
-    <h4>说明</h4>
-    <p>该视图仅支持 Get 操作，查询时需要指定 <code>TENANT_ID</code>、<code>PLAN_ID</code> 字段。</p>
-  </main>
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>V4.2.0 及以后版本建议通过 V$OB_SQL_PLAN 查询更详细的计划信息。</p>
+</main>
 
 相关表/视图
 ---------------
@@ -32,3 +32,8 @@ GV$OB_PLAN_CACHE_PLAN_EXPLAIN
 | ROWS         | bigint(20)    | NO         | 预估的结果行数          |
 | COST         | bigint(20)    | NO         | 预估的代价            |
 | PROPERTY     | varchar(4096) | NO         | 对应 Operator 的信息  |
+
+  <main id="notice" type='explain'>
+    <h4>说明</h4>
+    <p>该视图仅支持 Get 操作，查询时需要指定 <code>TENANT_ID</code>、<code>PLAN_ID</code> 字段。</p>
+  </main>
