--- a/zh-CN/7.reference/5.system-reference/5.system-view-of-oracle-mode/3.performance-view-of-oracle-mode/22.gv-plan_cache_plan_explain-of-oracle-mode.md
+++ b/zh-CN/7.reference/5.system-reference/5.system-view-of-oracle-mode/3.performance-view-of-oracle-mode/22.gv-plan_cache_plan_explain-of-oracle-mode.md
@@ -6,10 +6,10 @@ GV$OB_PLAN_CACHE_PLAN_EXPLAIN
 
 展示缓存在全部的 OBServer 节点中的计划缓存中的物理执行计划。
 
-  <main id="notice" type='explain'>
-    <h4>说明</h4>
-    <p>该视图仅支持 GET 操作，查询时需要指定 IP、PORT、TENANT_ID、PLAN_ID字段。</p>
-  </main>
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>V4.2.0 及以后版本建议通过 GV$OB_SQL_PLAN 查询更详细的计划信息。</p>
+</main>
 
 **字段说明**
 -----------------------------
@@ -27,3 +27,8 @@ GV$OB_PLAN_CACHE_PLAN_EXPLAIN
 | ROWS         | NUMBER(38)     | NO             | 预估的结果行数          |
 | COST         | NUMBER(38)     | NO             | 预估的代价            |
 | PROPERTY     | VARCHAR2(4096) | NO             | 对应 Operator 的信息  |
+
+  <main id="notice" type='explain'>
+    <h4>说明</h4>
+    <p>该视图仅支持 GET 操作，查询时需要指定 IP、PORT、TENANT_ID、PLAN_ID字段。</p>
+  </main>
