--- a/zh-CN/7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/252.minor_freeze_times.md
+++ b/zh-CN/7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/252.minor_freeze_times.md
@@ -1,6 +1,6 @@
 # minor_freeze_times
 
-`minor_freeze_times` 用于设置多少次小合并触发一次全局合并。
+`minor_freeze_times` 用于设置多少次转储触发一次全局合并。
 
 <main id="notice" type='explain'>
   <h4>说明</h4>
