--- a/zh-CN/9.release-notes/101.enterprise-edition-history-release/102.V3.1/99.ob-311.md
+++ b/zh-CN/9.release-notes/101.enterprise-edition-history-release/102.V3.1/99.ob-311.md
@@ -2,8 +2,9 @@
 
 #RNDate#2021-05-18
 
-## 版本信息
+## V3.1.1
 
+### 版本信息
 
 * 发布时间：2021 年 5月 18日
 
@@ -11,13 +12,11 @@
 
 * RPM 版本号：oceanbase-3.1.1-20210508100750
 
-## 版本定位
-
+### 版本定位
 
 本次发布版本（V3.1.1）为测试版本，供内外部项目进行 POC 验证测试。
 
-## 功能增强
-
+### 功能增强
 
 * 优化 CLOG 日志文件同步写入逻辑，去除对共享内存的使用，提升故障场景下日志数据的可靠性。
 
@@ -27,8 +26,7 @@
 
 * MySQL 模式下支持 `ASIN()` 和 `ACOS()` 函数。
 
-## 缺陷修复
-
+### 缺陷修复
 
 * 修复了在返回行记录时对 `LOB` 类型列的字符集进行转换操作，解决客户端出现乱码的问题。
 
