--- a/zh-CN/7.reference/3.database-object-management/2.manage-object-of-oracle-mode/1.manage-tables-of-oracle-mode/10.manage-external-tables-of-oracle-mode/2.create-a-external-table-of-oracle-mode.md
+++ b/zh-CN/7.reference/3.database-object-management/2.manage-object-of-oracle-mode/1.manage-tables-of-oracle-mode/10.manage-external-tables-of-oracle-mode/2.create-a-external-table-of-oracle-mode.md
@@ -131,20 +131,20 @@ FORMAT = (
 3,"ali",95
 ```
 
-1. 在任意一个 OBserver 节点上，租户管理员登录到集群的 Oracle 租户。
+1. 在任意一个 OBserver 节点上，租户管理员通过本地 Unix Socket 连接集群的 Oracle 租户。
 
-   连接示例如下，连接数据库时请以实际环境为准。
+   连接示例如下：
 
    ```shell
-   obclient -h10.xx.xx.xx -P2881 -uroot@sys -p***** -A
+   obclient -S /home/admin/oceanbase/run/sql.sock -usys@oracle -p********
    ```
-   
-   通过直连方式连接数据库的详细操作，请参见 [通过 OBClient 连接 OceanBase 租户](../../../../../3.develop/2.application-development-of-oracle-mode/1.connect-to-oceanbase-database-of-oracle-mode/2.connect-to-an-oceanbase-tenant-by-using-obclient-of-oracle-mode.md)。
+
+   通过本地 Unix Socket 连接 OceanBase 数据库的具体操作及说明，请参见 [secure_file_priv](../../../../8.configuration-items-and-system-variables/2.system-variable/3.global-system-variable/115.secure_file_priv-global.md)。
 
 2. 配置数据库可以访问的路径 `/home/admin/`。
 
     ```sql
-    SET GLOBAL SECURE_FILE_PRIV = "/home/admin/";
+    SET GLOBAL secure_file_priv = "/home/admin/";
     ```
 
     命令执行成功后，需要重启会话后，修改才能生效。
