--- a/zh-CN/7.reference/3.database-object-management/2.manage-object-of-oracle-mode/1.manage-tables-of-oracle-mode/10.manage-external-tables-of-oracle-mode/2.create-a-external-table-of-oracle-mode.md
+++ b/zh-CN/7.reference/3.database-object-management/2.manage-object-of-oracle-mode/1.manage-tables-of-oracle-mode/10.manage-external-tables-of-oracle-mode/2.create-a-external-table-of-oracle-mode.md
@@ -131,7 +131,7 @@ FORMAT = (
 3,"ali",95
 ```
 
-1. 在任意一个 OBserver 节点上，通过本地 Unix Socket 连接集群的 `sys` 租户。
+1. 在任意一个 OBserver 节点上，通过本地 Unix Socket 连接集群的 Oracle 租户。
 
    连接示例如下：
 
@@ -149,7 +149,7 @@ FORMAT = (
 
     命令执行成功后，需要重启会话后，修改才能生效。
 
-3. 用户租户登录数据库后，创建外表 `ext_t3`。
+3. 重新连接数据库后，创建外表 `ext_t3`。
 
     ```sql
     CREATE EXTERNAL TABLE ext_t3(ID NUMBER(32), NAME VARCHAR2(30),SCORE NUMBER(32))
